@@ -23,12 +23,19 @@ package org.klomp.snark;
 import java.io.File;
 import java.io.IOException;
 import java.io.RandomAccessFile;
+import java.nio.charset.Charset;
+import java.nio.charset.CharsetEncoder;
+import java.security.MessageDigest;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.StringTokenizer;
+import java.util.concurrent.ConcurrentHashMap;
 
 import net.i2p.crypto.SHA1;
+import net.i2p.util.Log;
+import net.i2p.util.SecureFile;
 
 /**
  * Maintains pieces on disk. Can be used to store and retrieve pieces.
@@ -42,24 +49,35 @@ public class Storage
   private Object[] RAFlock;  // lock on RAF access
   private long[] RAFtime;    // when was RAF last accessed, or 0 if closed
   private File[] RAFfile;    // File to make it easier to reopen
+  /** priorities by file; default 0; may be null. @since 0.8.1 */
+  private int[] priorities;
+  /** is the file empty and sparse? */
+  private boolean[] isSparse;
 
   private final StorageListener listener;
-  private I2PSnarkUtil _util;
+  private final I2PSnarkUtil _util;
+  private final Log _log;
 
-  private BitField bitfield; // BitField to represent the pieces
+  private /* FIXME final FIXME */ BitField bitfield; // BitField to represent the pieces
   private int needed; // Number of pieces needed
   private boolean _probablyComplete;  // use this to decide whether to open files RO
 
-  // XXX - Not always set correctly
-  int piece_size;
-  int pieces;
-  boolean changed;
+  private final int piece_size;
+  private final int pieces;
+  private final long total_length;
+  private boolean changed;
 
   /** The default piece size. */
-  private static int MIN_PIECE_SIZE = 256*1024;
-  private static int MAX_PIECE_SIZE = 1024*1024;
+  private static final int MIN_PIECE_SIZE = 256*1024;
+  /** note that we start reducing max number of peer connections above 1MB */
+  public static final int MAX_PIECE_SIZE = 2*1024*1024;
   /** The maximum number of pieces in a torrent. */
-  private static long MAX_PIECES = 100*1024/20;
+  public static final int MAX_PIECES = 10*1024;
+  public static final long MAX_TOTAL_SIZE = MAX_PIECE_SIZE * (long) MAX_PIECES;
+
+  private static final Map<String, String> _filterNameCache = new ConcurrentHashMap();
+
+  private static final boolean _isWindows = System.getProperty("os.name").startsWith("Win");
 
   /**
    * Creates a new storage based on the supplied MetaInfo.  This will
@@ -71,53 +89,65 @@ public class Storage
     throws IOException
   {
     _util = util;
+    _log = util.getContext().logManager().getLog(Storage.class);
     this.metainfo = metainfo;
     this.listener = listener;
     needed = metainfo.getPieces();
     _probablyComplete = false;
     bitfield = new BitField(needed);
+    piece_size = metainfo.getPieceLength(0);
+    pieces = needed;
+    total_length = metainfo.getTotalLength();
   }
 
   /**
    * Creates a storage from the existing file or directory together
    * with an appropriate MetaInfo file as can be announced on the
    * given announce String location.
+   *
+   * @param announce may be null
+   * @param listener may be null
    */
-  public Storage(I2PSnarkUtil util, File baseFile, String announce, StorageListener listener)
+  public Storage(I2PSnarkUtil util, File baseFile, String announce,
+                 boolean privateTorrent, StorageListener listener)
     throws IOException
   {
     _util = util;
+    _log = util.getContext().logManager().getLog(Storage.class);
     this.listener = listener;
     // Create names, rafs and lengths arrays.
     getFiles(baseFile);
     
     long total = 0;
-    ArrayList lengthsList = new ArrayList();
+    ArrayList<Long> lengthsList = new ArrayList();
     for (int i = 0; i < lengths.length; i++)
       {
         long length = lengths[i];
         total += length;
-        lengthsList.add(new Long(length));
+        lengthsList.add(Long.valueOf(length));
       }
 
-    piece_size = MIN_PIECE_SIZE;
-    pieces = (int) ((total - 1)/piece_size) + 1;
-    while (pieces > MAX_PIECES && piece_size < MAX_PIECE_SIZE)
+    if (total <= 0)
+        throw new IOException("Torrent contains no data");
+
+    int pc_size = MIN_PIECE_SIZE;
+    int pcs = (int) ((total - 1)/pc_size) + 1;
+    while (pcs > MAX_PIECES && pc_size < MAX_PIECE_SIZE)
       {
-        piece_size = piece_size*2;
-        pieces = (int) ((total - 1)/piece_size) +1;
+        pc_size *= 2;
+        pcs = (int) ((total - 1)/pc_size) +1;
       }
+    piece_size = pc_size;
+    pieces = pcs;
+    total_length = total;
 
-    // Note that piece_hashes and the bitfield will be filled after
-    // the MetaInfo is created.
-    byte[] piece_hashes = new byte[20*pieces];
     bitfield = new BitField(pieces);
     needed = 0;
 
-    List files = new ArrayList();
+    List<List<String>> files = new ArrayList();
     for (int i = 0; i < names.length; i++)
       {
-        List file = new ArrayList();
+        List<String> file = new ArrayList();
         StringTokenizer st = new StringTokenizer(names[i], File.separator);
         while (st.hasMoreTokens())
           {
@@ -134,37 +164,26 @@ public class Storage
         lengthsList = null;
       }
 
-    // Note that the piece_hashes are not correctly setup yet.
+    byte[] piece_hashes = fast_digestCreate();
     metainfo = new MetaInfo(announce, baseFile.getName(), null, files,
-                            lengthsList, piece_size, piece_hashes, total);
+                            lengthsList, piece_size, piece_hashes, total, privateTorrent);
 
   }
 
-  // Creates piece hashes for a new storage.
-  // This does NOT create the files, just the hashes
-  public void create() throws IOException
-  {
-//    if (true) {
-        fast_digestCreate();
-//    } else {
-//        orig_digestCreate();
-//    }
-  }
-  
-/*
-  private void orig_digestCreate() throws IOException {
+  /**
+   * Creates piece hashes for a new storage.
+   * This does NOT create the files, just the hashes.
+   * Also sets all the bitfield bits.
+   *
+   *  FIXME we can run out of fd's doing this,
+   *  maybe some sort of global close-RAF-right-away flag
+   *  would do the trick
+   */
+  private byte[] fast_digestCreate() throws IOException {
     // Calculate piece_hashes
-    MessageDigest digest = null;
-    try
-      {
-        digest = MessageDigest.getInstance("SHA");
-      }
-    catch(NoSuchAlgorithmException nsa)
-      {
-        throw new InternalError(nsa.toString());
-      }
+    MessageDigest digest = SHA1.getInstance();
 
-    byte[] piece_hashes = metainfo.getPieceHashes();
+    byte[] piece_hashes = new byte[20 * pieces];
 
     byte[] piece = new byte[piece_size];
     for (int i = 0; i < pieces; i++)
@@ -172,43 +191,10 @@ public class Storage
         int length = getUncheckedPiece(i, piece);
         digest.update(piece, 0, length);
         byte[] hash = digest.digest();
-        for (int j = 0; j < 20; j++)
-          piece_hashes[20 * i + j] = hash[j];
-
-        bitfield.set(i);
-
-        if (listener != null)
-          listener.storageChecked(this, i, true);
-      }
-
-    if (listener != null)
-      listener.storageAllChecked(this);
-
-    // Reannounce to force recalculating the info_hash.
-    metainfo = metainfo.reannounce(metainfo.getAnnounce());
-  }
-*/
-
-  private void fast_digestCreate() throws IOException {
-    // Calculate piece_hashes
-    SHA1 digest = new SHA1();
-
-    byte[] piece_hashes = metainfo.getPieceHashes();
-
-    byte[] piece = new byte[piece_size];
-    for (int i = 0; i < pieces; i++)
-      {
-        int length = getUncheckedPiece(i, piece);
-        digest.update(piece, 0, length);
-        byte[] hash = digest.digest();
-        for (int j = 0; j < 20; j++)
-          piece_hashes[20 * i + j] = hash[j];
-
+        System.arraycopy(hash, 0, piece_hashes, 20 * i, 20);
         bitfield.set(i);
       }
-
-    // Reannounce to force recalculating the info_hash.
-    metainfo = metainfo.reannounce(metainfo.getAnnounce());
+    return piece_hashes;
   }
 
   private void getFiles(File base) throws IOException
@@ -223,6 +209,8 @@ public class Storage
     RAFlock = new Object[size];
     RAFtime = new long[size];
     RAFfile = new File[size];
+    priorities = new int[size];
+    isSparse = new boolean[size];
 
     int i = 0;
     Iterator it = files.iterator();
@@ -248,8 +236,9 @@ public class Storage
         File[] files = f.listFiles();
         if (files == null)
           {
-            _util.debug("WARNING: Skipping '" + f 
-                        + "' not a normal file.", Snark.WARNING);
+            if (_log.shouldLog(Log.WARN))
+                _log.warn("WARNING: Skipping '" + f 
+                        + "' not a normal file.");
             return;
           }
         for (int i = 0; i < files.length; i++)
@@ -282,12 +271,172 @@ public class Storage
   }
 
   /**
+   *  Has the storage changed since instantiation?
+   *  @since 0.8.5
+   */
+  public boolean isChanged() {
+      return changed;
+  }
+
+  /**
+   *  @param file canonical path (non-directory)
+   *  @return number of bytes remaining; -1 if unknown file
+   *  @since 0.7.14
+   */
+  public long remaining(String file) {
+      long bytes = 0;
+      for (int i = 0; i < rafs.length; i++) {
+          File f = RAFfile[i];
+          // use canonical in case snark dir or sub dirs are symlinked
+          String canonical = null;
+          if (f != null) {
+              try {
+                  canonical = f.getCanonicalPath();
+              } catch (IOException ioe) {
+                  f = null;
+              }
+          }
+          if (f != null && canonical.equals(file)) {
+              if (complete())
+                  return 0;
+              int psz = piece_size;
+              long start = bytes;
+              long end = start + lengths[i];
+              int pc = (int) (bytes / psz);
+              long rv = 0;
+              if (!bitfield.get(pc))
+                  rv = Math.min(psz - (start % psz), lengths[i]);
+              for (int j = pc + 1; (((long)j) * psz) < end && j < pieces; j++) {
+                  if (!bitfield.get(j)) {
+                      if (((long)(j+1))*psz < end)
+                          rv += psz;
+                      else
+                          rv += end - (((long)j) * psz);
+                  }
+              }
+              return rv;
+          }
+          bytes += lengths[i];
+      }
+      return -1;
+  }
+
+  /**
+   *  @param file canonical path (non-directory)
+   *  @since 0.8.1
+   */
+  public int getPriority(String file) {
+      if (complete() || metainfo.getFiles() == null || priorities == null)
+          return 0;
+      for (int i = 0; i < rafs.length; i++) {
+          File f = RAFfile[i];
+          // use canonical in case snark dir or sub dirs are symlinked
+          if (f != null) {
+              try {
+                  String canonical = f.getCanonicalPath();
+                  if (canonical.equals(file))
+                      return priorities[i];
+              } catch (IOException ioe) {}
+          }
+      }
+      return 0;
+  }
+
+  /**
+   *  Must call Snark.updatePiecePriorities()
+   *  (which calls getPiecePriorities()) after calling this.
+   *  @param file canonical path (non-directory)
+   *  @param pri default 0; <0 to disable
+   *  @since 0.8.1
+   */
+  public void setPriority(String file, int pri) {
+      if (complete() || metainfo.getFiles() == null || priorities == null)
+          return;
+      for (int i = 0; i < rafs.length; i++) {
+          File f = RAFfile[i];
+          // use canonical in case snark dir or sub dirs are symlinked
+          if (f != null) {
+              try {
+                  String canonical = f.getCanonicalPath();
+                  if (canonical.equals(file)) {
+                      priorities[i] = pri;
+                      return;
+                  }
+              } catch (IOException ioe) {}
+          }
+      }
+  }
+
+  /**
+   *  Get the file priorities array.
+   *  @return null on error, if complete, or if only one file
+   *  @since 0.8.1
+   */
+  public int[] getFilePriorities() {
+      return priorities;
+  }
+
+  /**
+   *  Set the file priorities array.
+   *  Only call this when stopped, but after check()
+   *  @param p may be null
+   *  @since 0.8.1
+   */
+  void setFilePriorities(int[] p) {
+      priorities = p;
+  }
+
+  /**
+   *  Call setPriority() for all changed files first,
+   *  then call this.
+   *  Set the piece priority to the highest priority
+   *  of all files spanning the piece.
+   *  Caller must pass array to the PeerCoordinator.
+   *  @return null on error, if complete, or if only one file
+   *  @since 0.8.1
+   */
+  public int[] getPiecePriorities() {
+      if (complete() || metainfo.getFiles() == null || priorities == null)
+          return null;
+      int[] rv = new int[metainfo.getPieces()];
+      int file = 0;
+      long pcEnd = -1;
+      long fileEnd = lengths[0] - 1;
+      int psz = piece_size;
+      for (int i = 0; i < rv.length; i++) {
+          pcEnd += psz;
+          int pri = priorities[file];
+          while (fileEnd <= pcEnd && file < lengths.length - 1) {
+              file++;
+              long oldFileEnd = fileEnd;
+              fileEnd += lengths[file];
+              if (priorities[file] > pri && oldFileEnd < pcEnd)
+                  pri = priorities[file];
+          }
+          rv[i] = pri;
+      }
+      return rv;
+  }
+
+  /**
    * The BitField that tells which pieces this storage contains.
    * Do not change this since this is the current state of the storage.
    */
   public BitField getBitField()
   {
     return bitfield;
+  }
+
+  /**
+   *  The base file or directory name of the data,
+   *  as specified in the .torrent file, but filtered to remove
+   *  illegal characters. This is where the data actually is,
+   *  relative to the snark base dir.
+   *
+   *  @since 0.7.14
+   */
+  public String getBaseName() {
+      return filterName(metainfo.getName());
   }
 
   /**
@@ -301,14 +450,20 @@ public class Storage
   /** use a saved bitfield and timestamp from a config file */
   public void check(String rootDir, long savedTime, BitField savedBitField) throws IOException
   {
-    File base = new File(rootDir, filterName(metainfo.getName()));
+    File base;
+    boolean areFilesPublic = _util.getFilesPublic();
+    if (areFilesPublic)
+        base = new File(rootDir, filterName(metainfo.getName()));
+    else
+        base = new SecureFile(rootDir, filterName(metainfo.getName()));
     boolean useSavedBitField = savedTime > 0 && savedBitField != null;
 
-    List files = metainfo.getFiles();
+    List<List<String>> files = metainfo.getFiles();
     if (files == null)
       {
         // Create base as file.
-        _util.debug("Creating/Checking file: " + base, Snark.NOTICE);
+        if (_log.shouldLog(Log.INFO))
+            _log.info("Creating/Checking file: " + base);
         if (!base.createNewFile() && !base.exists())
           throw new IOException("Could not create file " + base);
 
@@ -318,6 +473,7 @@ public class Storage
         RAFlock = new Object[1];
         RAFtime = new long[1];
         RAFfile = new File[1];
+        isSparse = new boolean[1];
         lengths[0] = metainfo.getTotalLength();
         RAFlock[0] = new Object();
         RAFfile[0] = base;
@@ -331,11 +487,12 @@ public class Storage
     else
       {
         // Create base as dir.
-        _util.debug("Creating/Checking directory: " + base, Snark.NOTICE);
+        if (_log.shouldLog(Log.INFO))
+            _log.info("Creating/Checking directory: " + base);
         if (!base.mkdir() && !base.isDirectory())
           throw new IOException("Could not create directory " + base);
 
-        List  ls = metainfo.getLengths();
+        List<Long> ls = metainfo.getLengths();
         int size = files.size();
         long total = 0;
         lengths = new long[size];
@@ -344,15 +501,36 @@ public class Storage
         RAFlock = new Object[size];
         RAFtime = new long[size];
         RAFfile = new File[size];
+        isSparse = new boolean[size];
         for (int i = 0; i < size; i++)
           {
-            File f = createFileFromNames(base, (List)files.get(i));
-            lengths[i] = ((Long)ls.get(i)).longValue();
+            List<String> path = files.get(i);
+            File f = createFileFromNames(base, path, areFilesPublic);
+            // dup file name check after filtering
+            for (int j = 0; j < i; j++) {
+                if (f.equals(RAFfile[j])) {
+                    // Rename and start the check over again
+                    // Copy path since metainfo list is unmodifiable
+                    path = new ArrayList(path);
+                    int last = path.size() - 1;
+                    String lastPath = path.get(last);
+                    int dot = lastPath.lastIndexOf('.');
+                    // foo.mp3 -> foo_.mp3; foo -> _foo
+                    if (dot >= 0)
+                        lastPath = lastPath.substring(0, dot) + '_' + lastPath.substring(dot);
+                    else
+                        lastPath = '_' + lastPath;
+                    path.set(last, lastPath);
+                    f = createFileFromNames(base, path, areFilesPublic);
+                    j = 0;
+                }
+            }
+            lengths[i] = ls.get(i).longValue();
             RAFlock[i] = new Object();
             RAFfile[i] = f;
             total += lengths[i];
             if (useSavedBitField) {
-                long lm = base.lastModified();
+                long lm = f.lastModified();
                 if (lm <= 0 || lm > savedTime)
                     useSavedBitField = false;
             }
@@ -369,72 +547,123 @@ public class Storage
       bitfield = savedBitField;
       needed = metainfo.getPieces() - bitfield.count();
       _probablyComplete = complete();
-      _util.debug("Found saved state and files unchanged, skipping check", Snark.NOTICE);
+      if (_log.shouldLog(Log.INFO))
+          _log.info("Found saved state and files unchanged, skipping check");
     } else {
       // the following sets the needed variable
       changed = true;
-      checkCreateFiles();
+      checkCreateFiles(false);
     }
-    if (complete())
-        _util.debug("Torrent is complete", Snark.NOTICE);
-    else
-        _util.debug("Still need " + needed + " out of " + metainfo.getPieces() + " pieces", Snark.NOTICE);
+    if (complete()) {
+        if (_log.shouldLog(Log.INFO))
+            _log.info("Torrent is complete");
+    } else {
+        // fixme saved priorities
+        if (files != null)
+            priorities = new int[files.size()];
+        if (_log.shouldLog(Log.INFO))
+            _log.info("Still need " + needed + " out of " + metainfo.getPieces() + " pieces");
+    }
   }
 
   /**
-   * Reopen the file descriptors for a restart
-   * Do existence check but no length check or data reverification
+   * Doesn't really reopen the file descriptors for a restart.
+   * Just does an existence check but no length check or data reverification
+   *
+   * @param rootDir ignored
+   * @throws IOE on fail
    */
   public void reopen(String rootDir) throws IOException
   {
-    File base = new File(rootDir, filterName(metainfo.getName()));
-
-    List files = metainfo.getFiles();
-    if (files == null)
-      {
-        // Reopen base as file.
-        _util.debug("Reopening file: " + base, Snark.NOTICE);
-        if (!base.exists())
-          throw new IOException("Could not reopen file " + base);
+      if (RAFfile == null)
+          throw new IOException("Storage not checked yet");
+      for (int i = 0; i < RAFfile.length; i++) {
+          if (!RAFfile[i].exists())
+              throw new IOException("File does not exist: " + RAFfile[i]);
       }
-    else
-      {
-        // Reopen base as dir.
-        _util.debug("Reopening directory: " + base, Snark.NOTICE);
-        if (!base.isDirectory())
-          throw new IOException("Could not reopen directory " + base);
+  }
 
-        int size = files.size();
-        for (int i = 0; i < size; i++)
-          {
-            File f = getFileFromNames(base, (List)files.get(i));
-            if (!f.exists())
-                throw new IOException("Could not reopen file " + f);
-          }
+  private static final char[] ILLEGAL = new char[] {
+        '<', '>', ':', '"', '/', '\\', '|', '?', '*',
+        0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,
+        16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31,
+        0x7f,
+        0x80, 0x81, 0x82, 0x83, 0x84, 0x85, 0x86, 0x87,
+        0x88, 0x89, 0x8a, 0x8b, 0x8c, 0x8d, 0x8e, 0x8f,
+        0x90, 0x91, 0x92, 0x93, 0x94, 0x95, 0x96, 0x97,
+        0x98, 0x99, 0x9a, 0x9b, 0x9c, 0x9d, 0x9e, 0x9f,
+        // unicode newlines
+        0x2028, 0x2029
+     };
 
-      }
+  /**
+   * Removes 'suspicious' characters from the given file name.
+   * http://msdn.microsoft.com/en-us/library/aa365247%28VS.85%29.aspx
+   * Then replace chars not supported in the charset.
+   *
+   * This is called frequently and it can be pretty slow so cache the result.
+   *
+   * TODO: If multiple files in the same torrent map to the same filter name,
+   * the whole torrent will blow up. Check at torrent creation?
+   */
+  public static String filterName(String name)
+  {
+    String rv = _filterNameCache.get(name);
+    if (rv != null)
+        return rv;
+    if (name.equals(".") || name.equals(" ")) {
+        rv = "_";
+    } else {
+        rv = name;
+        if (rv.startsWith("."))
+            rv = '_' + rv.substring(1);
+        if (rv.endsWith(".") || rv.endsWith(" "))
+            rv = rv.substring(0, rv.length() - 1) + '_';
+        for (int i = 0; i < ILLEGAL.length; i++) {
+            if (rv.indexOf(ILLEGAL[i]) >= 0)
+                rv = rv.replace(ILLEGAL[i], '_');
+        }
+        // Replace characters not supported in the charset
+        if (!Charset.defaultCharset().name().equals("UTF-8")) {
+            try {
+                CharsetEncoder enc = Charset.defaultCharset().newEncoder();
+                if (!enc.canEncode(rv)) {
+                    String repl = rv;
+                    for (int i = 0; i < rv.length(); i++) {
+                        char c = rv.charAt(i);
+                        if (!enc.canEncode(c))
+                            repl = repl.replace(c, '_');
+                    }
+                    rv = repl;
+                }
+            } catch (Exception ex) {
+                ex.printStackTrace();
+            }
+        }
+    }
+    _filterNameCache.put(name, rv);
+    return rv;
   }
 
   /**
-   * Removes 'suspicious' characters from the give file name.
+   *  Note that filtering each path element individually may lead to
+   *  things going in the wrong place if there are duplicates
+   *  in intermediate path elements after filtering.
    */
-  private static String filterName(String name)
-  {
-    // XXX - Is this enough?
-    return name.replace(File.separatorChar, '_');
-  }
-
-  private File createFileFromNames(File base, List names) throws IOException
+  private static File createFileFromNames(File base, List<String> names, boolean areFilesPublic) throws IOException
   {
     File f = null;
-    Iterator it = names.iterator();
+    Iterator<String> it = names.iterator();
     while (it.hasNext())
       {
-        String name = filterName((String)it.next());
+        String name = filterName(it.next());
         if (it.hasNext())
           {
             // Another dir in the hierarchy.
-            f = new File(base, name);
+            if (areFilesPublic)
+                f = new File(base, name);
+            else
+                f = new SecureFile(base, name);
             if (!f.mkdir() && !f.isDirectory())
               throw new IOException("Could not create directory " + f);
             base = f;
@@ -442,7 +671,10 @@ public class Storage
         else
           {
             // The final element (file) in the hierarchy.
-            f = new File(base, name);
+            if (areFilesPublic)
+                f = new File(base, name);
+            else
+                f = new SecureFile(base, name);
             if (!f.createNewFile() && !f.exists())
               throw new IOException("Could not create file " + f);
           }
@@ -450,12 +682,12 @@ public class Storage
     return f;
   }
 
-  public static File getFileFromNames(File base, List names)
+  public static File getFileFromNames(File base, List<String> names)
   {
-    Iterator it = names.iterator();
+    Iterator<String> it = names.iterator();
     while (it.hasNext())
       {
-        String name = filterName((String)it.next());
+        String name = filterName(it.next());
         base = new File(base, name);
       }
     return base;
@@ -464,17 +696,29 @@ public class Storage
   /**
    * This is called at the beginning, and at presumed completion,
    * so we have to be careful about locking.
+   *
+   * @param recheck if true, this is a check after we downloaded the
+   *        last piece, and we don't modify the global bitfield unless
+   *        the check fails.
    */
-  private void checkCreateFiles() throws IOException
+  private void checkCreateFiles(boolean recheck) throws IOException
   {
     // Whether we are resuming or not,
     // if any of the files already exists we assume we are resuming.
     boolean resume = false;
 
     _probablyComplete = true;
-    needed = metainfo.getPieces();
+    // use local variables during the check
+    int need = metainfo.getPieces();
+    BitField bfield;
+    if (recheck) {
+        bfield = new BitField(need);
+    } else {
+        bfield = bitfield;
+    }
 
     // Make sure all files are available and of correct length
+    // The files should all exist as they have been created with zero length by createFilesFromNames()
     for (int i = 0; i < rafs.length; i++)
       {
         long length = RAFfile[i].length();
@@ -488,32 +732,57 @@ public class Storage
           changed = true;
           synchronized(RAFlock[i]) {
               allocateFile(i);
+              // close as we go so we don't run out of file descriptors
+              try {
+                  closeRAF(i);
+              } catch (IOException ioe) {}
           }
         } else {
-          _util.debug("File '" + names[i] + "' exists, but has wrong length - repairing corruption", Snark.ERROR);
+          String msg = "File '" + names[i] + "' exists, but has wrong length (expected " +
+                       lengths[i] + " but found " + length + ") - repairing corruption";
+          if (listener != null)
+              listener.addMessage(msg);
+          _log.error(msg);
           changed = true;
+          resume = true;
           _probablyComplete = false; // to force RW
           synchronized(RAFlock[i]) {
               checkRAF(i);
               rafs[i].setLength(lengths[i]);
+              try {
+                  closeRAF(i);
+              } catch (IOException ioe) {}
           }
-          // will be closed below
         }
       }
 
     // Check which pieces match and which don't
     if (resume)
       {
-        pieces = metainfo.getPieces();
-        byte[] piece = new byte[metainfo.getPieceLength(0)];
+        byte[] piece = new byte[piece_size];
+        int file = 0;
+        long fileEnd = lengths[0];
+        long pieceEnd = 0;
         for (int i = 0; i < pieces; i++)
           {
             int length = getUncheckedPiece(i, piece);
             boolean correctHash = metainfo.checkPiece(i, piece, 0, length);
+            // close as we go so we don't run out of file descriptors
+            pieceEnd += length;
+            while (fileEnd <= pieceEnd) {
+                synchronized(RAFlock[file]) {
+                    try {
+                        closeRAF(file);
+                    } catch (IOException ioe) {}
+                }
+                if (++file >= rafs.length)
+                    break;
+                fileEnd += lengths[file];
+            }
             if (correctHash)
               {
-                bitfield.set(i);
-                needed--;
+                bfield.set(i);
+                need--;
               }
 
             if (listener != null)
@@ -524,12 +793,22 @@ public class Storage
     _probablyComplete = complete();
     // close all the files so we don't end up with a zillion open ones;
     // we will reopen as needed
-    for (int i = 0; i < rafs.length; i++) {
-      synchronized(RAFlock[i]) {
-        try {
-          closeRAF(i);
-        } catch (IOException ioe) {}
-      }
+    // Now closed above to avoid running out of file descriptors
+    //for (int i = 0; i < rafs.length; i++) {
+    //  synchronized(RAFlock[i]) {
+    //    try {
+    //      closeRAF(i);
+    //    } catch (IOException ioe) {}
+    //  }
+    //}
+
+    // do this here so we don't confuse the user during checking
+    needed = need;
+    if (recheck && need > 0) {
+        // whoops, recheck failed
+        synchronized(bitfield) {
+            bitfield = bfield;
+        }
     }
 
     if (listener != null) {
@@ -539,27 +818,55 @@ public class Storage
     }
   }
 
+  /**
+   *  This creates a (presumably) sparse file so that reads won't fail with IOE.
+   *  Sets isSparse[nr] = true. balloonFile(nr) should be called later to
+   *  defrag the file.
+   *
+   *  This calls openRAF(); caller must synchronize and call closeRAF().
+   */
   private void allocateFile(int nr) throws IOException
   {
     // caller synchronized
     openRAF(nr, false);  // RW
-    // XXX - Is this the best way to make sure we have enough space for
-    // the whole file?
-    listener.storageCreateFile(this, names[nr], lengths[nr]);
-    final int ZEROBLOCKSIZE = metainfo.getPieceLength(0);
-    byte[] zeros = new byte[ZEROBLOCKSIZE];
-    int i;
-    for (i = 0; i < lengths[nr]/ZEROBLOCKSIZE; i++)
-      {
-        rafs[nr].write(zeros);
-        if (listener != null)
-          listener.storageAllocated(this, ZEROBLOCKSIZE);
-      }
-    int size = (int)(lengths[nr] - i*ZEROBLOCKSIZE);
-    rafs[nr].write(zeros, 0, size);
+    long remaining = lengths[nr];
+    if (listener != null)
+        listener.storageCreateFile(this, names[nr], remaining);
+    rafs[nr].setLength(remaining);
+    // don't bother ballooning later on Windows since there is no sparse file support
+    // until JDK7 using the JSR-203 interface.
+    // RAF seeks/writes do not create sparse files.
+    // Windows will zero-fill up to the point of the write, which
+    // will make the file fairly unfragmented, on average, at least until
+    // near the end where it will get exponentially more fragmented.
+    if (!_isWindows)
+        isSparse[nr] = true;
     // caller will close rafs[nr]
     if (listener != null)
-      listener.storageAllocated(this, size);
+      listener.storageAllocated(this, lengths[nr]);
+  }
+
+  /**
+   *  This "balloons" the file with zeros to eliminate disk fragmentation.,
+   *  Overwrites the entire file with zeros. Sets isSparse[nr] = false.
+   *
+   *  Caller must synchronize and call checkRAF() or openRAF().
+   *  @since 0.9.1
+   */
+  private void balloonFile(int nr) throws IOException
+  {
+    if (_log.shouldLog(Log.INFO))
+        _log.info("Ballooning " + nr + ": " + RAFfile[nr]);
+    long remaining = lengths[nr];
+    final int ZEROBLOCKSIZE = (int) Math.min(remaining, 32*1024);
+    byte[] zeros = new byte[ZEROBLOCKSIZE];
+    rafs[nr].seek(0);
+    while (remaining > 0) {
+        int size = (int) Math.min(remaining, ZEROBLOCKSIZE);
+        rafs[nr].write(zeros, 0, size);
+        remaining -= size;
+    }
+    isSparse[nr] = false;
   }
 
 
@@ -572,12 +879,15 @@ public class Storage
     if (rafs == null) return;
     for (int i = 0; i < rafs.length; i++)
       {
+        // if we had an IOE in check(), the RAFlock may be null
+        if (RAFlock[i] == null)
+            continue;
         try {
           synchronized(RAFlock[i]) {
             closeRAF(i);
           }
         } catch (IOException ioe) {
-            _util.debug("Error closing " + RAFfile[i], Snark.ERROR, ioe);
+            _log.error("Error closing " + RAFfile[i], ioe);
             // gobble gobble
         }
       }
@@ -598,7 +908,8 @@ public class Storage
     try {
       bs = new byte[len];
     } catch (OutOfMemoryError oom) {
-      _util.debug("Out of memory, can't honor request for piece " + piece, Snark.WARNING, oom);
+      if (_log.shouldLog(Log.WARN))
+          _log.warn("Out of memory, can't honor request for piece " + piece, oom);
       return null;
     }
     getUncheckedPiece(piece, bs, off, len);
@@ -612,54 +923,66 @@ public class Storage
    * matches), otherwise false.
    * @exception IOException when some storage related error occurs.
    */
-  public boolean putPiece(int piece, byte[] ba) throws IOException
+  public boolean putPiece(PartialPiece pp) throws IOException
   {
-    // First check if the piece is correct.
-    // Copy the array first to be paranoid.
-    byte[] bs = (byte[]) ba.clone();
-    int length = bs.length;
-    boolean correctHash = metainfo.checkPiece(piece, bs, 0, length);
-    if (listener != null)
-      listener.storageChecked(this, piece, correctHash);
-    if (!correctHash)
-      return false;
+      int piece = pp.getPiece();
+      try {
+          synchronized(bitfield) {
+              if (bitfield.get(piece))
+                  return true; // No need to store twice.
+          }
 
-    synchronized(bitfield)
-      {
-        if (bitfield.get(piece))
-          return true; // No need to store twice.
-      }
+          // TODO alternative - check hash on the fly as we write to the file,
+          // to save another I/O pass
+          boolean correctHash = metainfo.checkPiece(pp);
+          if (listener != null)
+            listener.storageChecked(this, piece, correctHash);
+          if (!correctHash) {
+              return false;
+          }
 
-    // Early typecast, avoid possibly overflowing a temp integer
-    long start = (long) piece * (long) metainfo.getPieceLength(0);
-    int i = 0;
-    long raflen = lengths[i];
-    while (start > raflen)
-      {
-        i++;
-        start -= raflen;
-        raflen = lengths[i];
-      }
+          // Early typecast, avoid possibly overflowing a temp integer
+          long start = (long) piece * (long) piece_size;
+          int i = 0;
+          long raflen = lengths[i];
+          while (start > raflen) {
+              i++;
+              start -= raflen;
+              raflen = lengths[i];
+          }
     
-    int written = 0;
-    int off = 0;
-    while (written < length)
-      {
-        int need = length - written;
-        int len = (start + need < raflen) ? need : (int)(raflen - start);
-        synchronized(RAFlock[i])
-          {
-            checkRAF(i);
-            rafs[i].seek(start);
-            rafs[i].write(bs, off + written, len);
+          int written = 0;
+          int off = 0;
+          int length = metainfo.getPieceLength(piece);
+          while (written < length) {
+              int need = length - written;
+              int len = (start + need < raflen) ? need : (int)(raflen - start);
+              synchronized(RAFlock[i]) {
+                  checkRAF(i);
+                  if (isSparse[i]) {
+                      // If the file is a newly created sparse file,
+                      // AND we aren't skipping it, balloon it with all
+                      // zeros to un-sparse it by allocating the space.
+                      // Obviously this could take a while.
+                      // Once we have written to it, it isn't empty/sparse any more.
+                      if (priorities == null || priorities[i] >= 0)
+                          balloonFile(i);
+                      else
+                          isSparse[i] = false;
+                  }
+                  rafs[i].seek(start);
+                  //rafs[i].write(bs, off + written, len);
+                  pp.write(rafs[i], off + written, len);
+              }
+              written += len;
+              if (need - len > 0) {
+                  i++;
+                  raflen = lengths[i];
+                  start = 0;
+              }
           }
-        written += len;
-        if (need - len > 0)
-          {
-            i++;
-            raflen = lengths[i];
-            start = 0;
-          }
+      } finally {
+          pp.release();
       }
 
     changed = true;
@@ -686,26 +1009,37 @@ public class Storage
       // checkCreateFiles() which will set 'needed' and 'bitfield'
       // and also call listener.storageCompleted() if the double-check
       // was successful.
-      // Todo: set a listener variable so the web shows "checking" and don't
-      // have the user panic when completed amount goes to zero temporarily?
-      needed = metainfo.getPieces();
-      bitfield = new BitField(needed);
-      checkCreateFiles();
+      checkCreateFiles(true);
       if (needed > 0) {
         if (listener != null)
             listener.setWantedPieces(this);
-        _util.debug("WARNING: Not really done, missing " + needed
-                    + " pieces", Snark.WARNING);
+        if (_log.shouldLog(Log.WARN))
+            _log.warn("WARNING: Not really done, missing " + needed
+                    + " pieces");
       }
     }
 
     return true;
+ }
+
+  /**
+   *  This is a dup of MetaInfo.getPieceLength() but we need it
+   *  before the MetaInfo is created in our second constructor.
+   *  @since 0.8.5
+   */
+  private int getPieceLength(int piece) {
+    if (piece >= 0 && piece < pieces -1)
+      return piece_size;
+    else if (piece == pieces -1)
+      return (int)(total_length - ((long)piece * piece_size));
+    else
+      throw new IndexOutOfBoundsException("no piece: " + piece);
   }
 
   private int getUncheckedPiece(int piece, byte[] bs)
     throws IOException
   {
-      return getUncheckedPiece(piece, bs, 0, metainfo.getPieceLength(piece));
+      return getUncheckedPiece(piece, bs, 0, getPieceLength(piece));
   }
 
   private int getUncheckedPiece(int piece, byte[] bs, int off, int length)
@@ -714,7 +1048,7 @@ public class Storage
     // XXX - copy/paste code from putPiece().
 
     // Early typecast, avoid possibly overflowing a temp integer
-    long start = ((long) piece * (long) metainfo.getPieceLength(0)) + off;
+    long start = ((long) piece * (long) piece_size) + off;
 
     int i = 0;
     long raflen = lengths[i];
@@ -751,7 +1085,7 @@ public class Storage
   /**
    * Close unused RAFs - call periodically
    */
-  private static final long RAFCloseDelay = 7*60*1000;
+  private static final long RAFCloseDelay = 4*60*1000;
   public void cleanRAFs() {
     long cutoff = System.currentTimeMillis() - RAFCloseDelay;
     for (int i = 0; i < RAFlock.length; i++) {
