@@ -3,6 +3,8 @@
  */
 package net.i2p.i2ptunnel;
 
+import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.net.ConnectException;
@@ -12,9 +14,14 @@ import java.net.ServerSocket;
 import java.net.Socket;
 import java.net.UnknownHostException;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Properties;
+import java.util.concurrent.Executors;
+import java.util.concurrent.SynchronousQueue;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.ThreadFactory;
 
 import net.i2p.I2PAppContext;
 import net.i2p.I2PException;
@@ -25,119 +32,86 @@ import net.i2p.client.streaming.I2PSocketManagerFactory;
 import net.i2p.client.streaming.I2PSocketOptions;
 import net.i2p.data.Destination;
 import net.i2p.util.EventDispatcher;
-import net.i2p.util.I2PThread;
+import net.i2p.util.I2PAppThread;
 import net.i2p.util.Log;
-import net.i2p.util.SimpleScheduler;
-import net.i2p.util.SimpleTimer;
 
 public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runnable {
 
-    private static final Log _log = new Log(I2PTunnelClientBase.class);
-    protected I2PAppContext _context;
-    protected Logging l;
+    protected final Log _log;
+    protected final I2PAppContext _context;
+    protected final Logging l;
 
     static final long DEFAULT_CONNECT_TIMEOUT = 60 * 1000;
 
     private static volatile long __clientId = 0;
     protected long _clientId;
-    protected Object sockLock = new Object(); // Guards sockMgr and mySockets
-    protected I2PSocketManager sockMgr;
-    protected List mySockets = new ArrayList();
+    protected final Object sockLock = new Object(); // Guards sockMgr and mySockets
+    protected I2PSocketManager sockMgr; // should be final and use a factory. LINT
+    protected final List<I2PSocket> mySockets = new ArrayList();
+    protected boolean _ownDest;
 
     protected Destination dest = null;
     private int localPort;
 
     private boolean listenerReady = false;
 
-    private ServerSocket ss;
+    protected ServerSocket ss;
 
-    private Object startLock = new Object();
+    private final Object startLock = new Object();
     private boolean startRunning = false;
 
-    private Object closeLock = new Object();
+    // private Object closeLock = new Object();
 
-    private byte[] pubkey;
+    // private byte[] pubkey;
 
-    private String handlerName;
+    private String privKeyFile;
 
-    private Object conLock = new Object();
-    
-    /** List of Socket for those accept()ed but not yet started up */
-    private List _waitingSockets = new ArrayList();
-    /** How many connections will we allow to be in the process of being built at once? */
-    private int _numConnectionBuilders;
-    /** How long will we allow sockets to sit in the _waitingSockets map before killing them? */
-    private int _maxWaitTime;
-    
+    // true if we are chained from a server.
+    private boolean chained = false;
+
+    /** how long to wait before dropping an idle thread */
+    private static final long HANDLER_KEEPALIVE_MS = 2*60*1000;
+
     /**
-     * How many concurrent connections this I2PTunnel instance will allow to be 
-     * in the process of connecting (or if less than 1, there is no limit)?
+     *  We keep a static pool of socket handlers for all clients,
+     *  as there is no need for isolation on the client side.
+     *  Extending classes may use it for other purposes.
+     *  Not for use by servers, as there is no limit on threads.
      */
-    public static final String PROP_NUM_CONNECTION_BUILDERS = "i2ptunnel.numConnectionBuilders";
+    private static volatile ThreadPoolExecutor _executor;
+    private static int _executorThreadCount;
+    private static final Object _executorLock = new Object();
+
     /**
-     * How long will we let a socket wait after being accept()ed without getting
-     * pumped through a connection builder (in milliseconds).  If this time is 
-     * reached, the socket is unceremoniously closed and discarded.  If the max 
-     * wait time is less than 1, there is no limit.
+     *  This constructor always starts the tunnel (ignoring the i2cp.delayOpen option).
+     *  It is used to add a client to an existing socket manager.
      *
+     *  @param localPort if 0, use any port, get actual port selected with getLocalPort()
+     *  @param sktMgr the existing socket manager
      */
-    public static final String PROP_MAX_WAIT_TIME = "i2ptunnel.maxWaitTime";
-    
-    private static final int DEFAULT_NUM_CONNECTION_BUILDERS = 5;
-    private static final int DEFAULT_MAX_WAIT_TIME = 30*1000;
-    
-    //public I2PTunnelClientBase(int localPort, boolean ownDest,
-    //		       Logging l) {
-    //    I2PTunnelClientBase(localPort, ownDest, l, (EventDispatcher)null);
-    //}
-
-    /**
-     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
-     *                                  badly that we cant create a socketManager
-     */
-    public I2PTunnelClientBase(int localPort, boolean ownDest, Logging l, 
-                               EventDispatcher notifyThis, String handlerName, 
-                               I2PTunnel tunnel) throws IllegalArgumentException{
+    public I2PTunnelClientBase(int localPort, Logging l, I2PSocketManager sktMgr,
+            I2PTunnel tunnel, EventDispatcher notifyThis, long clientId )
+            throws IllegalArgumentException {
         super(localPort + " (uninitialized)", notifyThis, tunnel);
-        _clientId = ++__clientId;
+        chained = true;
+        sockMgr = sktMgr;
+        _clientId = clientId;
         this.localPort = localPort;
         this.l = l;
-        this.handlerName = handlerName + _clientId;
-
+        _ownDest = true; // == ! shared client
         _context = tunnel.getContext();
         _context.statManager().createRateStat("i2ptunnel.client.closeBacklog", "How many pending sockets remain when we close one due to backlog?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
         _context.statManager().createRateStat("i2ptunnel.client.closeNoBacklog", "How many pending sockets remain when it was removed prior to backlog timeout?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
         _context.statManager().createRateStat("i2ptunnel.client.manageTime", "How long it takes to accept a socket and fire it into an i2ptunnel runner (or queue it for the pool)?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
         _context.statManager().createRateStat("i2ptunnel.client.buildRunTime", "How long it takes to run a queued socket into an i2ptunnel runner?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
+        _log = _context.logManager().getLog(getClass());
 
-        // no need to load the netDb with leaseSets for destinations that will never 
-        // be looked up
-        tunnel.getClientOptions().setProperty("i2cp.dontPublishLeaseSet", "true");
-        
-        while (sockMgr == null) {
-            synchronized (sockLock) {
-                if (ownDest) {
-                    sockMgr = buildSocketManager();
-                } else {
-                    sockMgr = getSocketManager();
-                }
-            }
-            if (sockMgr == null) {
-                _log.log(Log.CRIT, "Unable to create socket manager (our own? " + ownDest + ")");
-                try { Thread.sleep(10*1000); } catch (InterruptedException ie) {}
-            }
+        synchronized (_executorLock) {
+            if (_executor == null)
+                _executor = new CustomThreadPoolExecutor();
         }
-        if (sockMgr == null) {
-            l.log("Invalid I2CP configuration");
-            throw new IllegalArgumentException("Socket manager could not be created");
-        }
-        l.log("I2P session created");
 
-        getTunnel().addSession(sockMgr.getSession());
-        
-        Thread t = new I2PThread(this);
-        t.setName("Client " + _clientId);
-        listenerReady = false;
+        Thread t = new I2PAppThread(this, "Client " + tunnel.listenHost + ':' + localPort);
         t.start();
         open = true;
         synchronized (this) {
@@ -150,73 +124,265 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
             }
         }
 
-        configurePool(tunnel);
-        
         if (open && listenerReady) {
-            l.log("Ready! Port " + getLocalPort());
+            l.log("Client ready, listening on " + tunnel.listenHost + ':' + localPort);
             notifyEvent("openBaseClientResult", "ok");
         } else {
-            l.log("Error listening - please see the logs!");
+            l.log("Client error for " + tunnel.listenHost + ':' + localPort + ", check logs");
+            notifyEvent("openBaseClientResult", "error");
+        }
+    }
+
+    /**
+     * The main constructor.
+     * This may take a LONG time if building and starting a new manager.
+     *
+     * @param localPort if 0, use any port, get actual port selected with getLocalPort()
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we can't create a socketManager
+     */
+    public I2PTunnelClientBase(int localPort, boolean ownDest, Logging l, 
+                               EventDispatcher notifyThis, String handlerName, 
+                               I2PTunnel tunnel) throws IllegalArgumentException {
+        this(localPort, ownDest, l, notifyThis, handlerName, tunnel, null);
+    }
+
+    /**
+     * Use this to build a client with a persistent private key.
+     * This may take a LONG time if building and starting a new manager.
+     *
+     * @param localPort if 0, use any port, get actual port selected with getLocalPort()
+     * @param pkf Path to the private key file, or null to generate a transient key
+     *
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we can't create a socketManager
+     */
+    public I2PTunnelClientBase(int localPort, boolean ownDest, Logging l, 
+                               EventDispatcher notifyThis, String handlerName, 
+                               I2PTunnel tunnel, String pkf) throws IllegalArgumentException{
+        super(localPort + " (uninitialized)", notifyThis, tunnel);
+        _clientId = ++__clientId;
+        this.localPort = localPort;
+        this.l = l;
+        _ownDest = ownDest; // == ! shared client
+
+
+        _context = tunnel.getContext();
+        _context.statManager().createRateStat("i2ptunnel.client.closeBacklog", "How many pending sockets remain when we close one due to backlog?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
+        _context.statManager().createRateStat("i2ptunnel.client.closeNoBacklog", "How many pending sockets remain when it was removed prior to backlog timeout?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
+        _context.statManager().createRateStat("i2ptunnel.client.manageTime", "How long it takes to accept a socket and fire it into an i2ptunnel runner (or queue it for the pool)?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
+        _context.statManager().createRateStat("i2ptunnel.client.buildRunTime", "How long it takes to run a queued socket into an i2ptunnel runner?", "I2PTunnel", new long[] { 60*1000, 10*60*1000, 60*60*1000 });
+        _log = _context.logManager().getLog(getClass());
+
+        synchronized (_executorLock) {
+            if (_executor == null)
+                _executor = new CustomThreadPoolExecutor();
+        }
+
+        // normalize path so we can find it
+        if (pkf != null) {
+            File keyFile = new File(pkf);
+            if (!keyFile.isAbsolute())
+                keyFile = new File(_context.getConfigDir(), pkf);
+            this.privKeyFile = keyFile.getAbsolutePath();
+        }
+
+        // no need to load the netDb with leaseSets for destinations that will never 
+        // be looked up
+        boolean dccEnabled = (this instanceof I2PTunnelIRCClient) &&
+                      Boolean.valueOf(tunnel.getClientOptions().getProperty(I2PTunnelIRCClient.PROP_DCC)).booleanValue();
+        if (!dccEnabled)
+            tunnel.getClientOptions().setProperty("i2cp.dontPublishLeaseSet", "true");
+        
+        boolean openNow = !Boolean.valueOf(tunnel.getClientOptions().getProperty("i2cp.delayOpen")).booleanValue();
+        if (openNow) {
+            while (sockMgr == null) {
+                verifySocketManager();
+                if (sockMgr == null) {
+                    _log.error("Unable to connect to router and build tunnels for " + handlerName);
+                    // FIXME there is a loop in buildSocketManager(), do we really need another one here?
+                    // no matter, buildSocketManager() now throws an IllegalArgumentException
+                    try { Thread.sleep(10*1000); } catch (InterruptedException ie) {}
+                }
+            }
+            // can't be null unless we limit the loop above
+            //if (sockMgr == null) {
+            //    l.log("Invalid I2CP configuration");
+            //    throw new IllegalArgumentException("Socket manager could not be created");
+            //}
+            l.log("Tunnels ready for client: " + handlerName);
+
+        } // else delay creating session until createI2PSocket() is called
+        
+        Thread t = new I2PAppThread(this);
+        t.setName("Client " + _clientId);
+        t.start();
+        open = true;
+        synchronized (this) {
+            while (!listenerReady && open) {
+                try {
+                    wait();
+                } catch (InterruptedException e) {
+                    // ignore
+                }
+            }
+        }
+
+        if (open && listenerReady) {
+            if (openNow)
+                l.log("Client ready, listening on " + tunnel.listenHost + ':' + localPort);
+            else
+                l.log("Client ready, listening on " + tunnel.listenHost + ':' + localPort + ", delaying tunnel open until required");
+            notifyEvent("openBaseClientResult", "ok");
+        } else {
+            l.log("Client error for " + tunnel.listenHost + ':' + localPort + ", check logs");
             notifyEvent("openBaseClientResult", "error");
         }
     }
     
-    /** 
-     * build and configure the pool handling accept()ed but not yet 
-     * established connections 
+    /**
+     * Sets the this.sockMgr field if it is null, or if we want a new one.
+     * This may take a LONG time if building a new manager.
      *
+     * We need a socket manager before getDefaultOptions() and most other things
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
      */
-    private void configurePool(I2PTunnel tunnel) {
-        _waitingSockets = new ArrayList(4);
-        
-        Properties opts = tunnel.getClientOptions();
-        String maxWait = opts.getProperty(PROP_MAX_WAIT_TIME, DEFAULT_MAX_WAIT_TIME+"");
-        try { 
-            _maxWaitTime = Integer.parseInt(maxWait); 
-        } catch (NumberFormatException nfe) {
-            _maxWaitTime = DEFAULT_MAX_WAIT_TIME;
-        }
-        
-        String numBuild = opts.getProperty(PROP_NUM_CONNECTION_BUILDERS, DEFAULT_NUM_CONNECTION_BUILDERS+"");
-        try {
-            _numConnectionBuilders = Integer.parseInt(numBuild);
-        } catch (NumberFormatException nfe) {
-            _numConnectionBuilders = DEFAULT_NUM_CONNECTION_BUILDERS;
-        }
-
-        for (int i = 0; i < _numConnectionBuilders; i++) {
-            String name = "ClientBuilder" + _clientId + '.' + i;
-            I2PThread b = new I2PThread(new TunnelConnectionBuilder(), name);
-            b.setDaemon(true);
-            b.start();
+    protected void verifySocketManager() {
+        synchronized(sockLock) {
+            boolean newManager = false;
+            if (this.sockMgr == null) {
+                newManager = true;
+            } else {
+                I2PSession sess = sockMgr.getSession();
+                if (sess == null) {
+                    newManager = true;
+                } else if (sess.isClosed() &&
+                           Boolean.valueOf(getTunnel().getClientOptions().getProperty("i2cp.closeOnIdle")).booleanValue() &&
+                           Boolean.valueOf(getTunnel().getClientOptions().getProperty("i2cp.newDestOnResume")).booleanValue()) {
+                    // build a new socket manager and a new dest if the session is closed.
+                    getTunnel().removeSession(sess);
+                    if (_log.shouldLog(Log.WARN))
+                        _log.warn(getTunnel().getClientOptions().getProperty("inbound.nickname") + ": Built a new destination on resume");
+                    newManager = true;
+                }  // else the old socket manager will reconnect the old session if necessary
+            }
+            if (newManager) {
+                if (_ownDest)
+                    this.sockMgr = buildSocketManager();
+                else
+                    this.sockMgr = getSocketManager();
+            }
         }
     }
 
+    /** this is ONLY for shared clients */
     private static I2PSocketManager socketManager;
 
-    protected synchronized I2PSocketManager getSocketManager() {
-        return getSocketManager(getTunnel());
+
+    /**
+     * This is ONLY for shared clients.
+     * This may take a LONG time if building a new manager.
+     *
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
+    protected I2PSocketManager getSocketManager() {
+        return getSocketManager(getTunnel(), this.privKeyFile);
     }
-    protected static synchronized I2PSocketManager getSocketManager(I2PTunnel tunnel) {
+
+    /**
+     * This is ONLY for shared clients.
+     * This may take a LONG time if building a new manager.
+     *
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
+    protected static I2PSocketManager getSocketManager(I2PTunnel tunnel) {
+        return getSocketManager(tunnel, null);
+    }
+
+    /**
+     * This is ONLY for shared clients.
+     * This may take a LONG time if building a new manager.
+     *
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
+    protected static synchronized I2PSocketManager getSocketManager(I2PTunnel tunnel, String pkf) {
+        // shadows instance _log
+        Log _log = tunnel.getContext().logManager().getLog(I2PTunnelClientBase.class);
         if (socketManager != null) {
             I2PSession s = socketManager.getSession();
             if ( (s == null) || (s.isClosed()) ) {
-                _log.info("Building a new socket manager since the old one closed [s=" + s + "]");
-                socketManager = buildSocketManager(tunnel);
+                if (_log.shouldLog(Log.INFO))
+                    _log.info(tunnel.getClientOptions().getProperty("inbound.nickname") + ": Building a new socket manager since the old one closed [s=" + s + "]");
+                if (s != null)
+                    tunnel.removeSession(s);
+                // We could be here a LONG time, holding the lock
+                socketManager = buildSocketManager(tunnel, pkf);
             } else {
-                _log.info("Not building a new socket manager since the old one is open [s=" + s + "]");
+                if (_log.shouldLog(Log.INFO))
+                    _log.info(tunnel.getClientOptions().getProperty("inbound.nickname") + ": Not building a new socket manager since the old one is open [s=" + s + "]");
             }
         } else {
-            _log.info("Building a new socket manager since there is no other one");
-            socketManager = buildSocketManager(tunnel);
+            if (_log.shouldLog(Log.INFO))
+                _log.info(tunnel.getClientOptions().getProperty("inbound.nickname") + ": Building a new socket manager since there is no other one");
+            socketManager = buildSocketManager(tunnel, pkf);
         }
         return socketManager;
     }
 
+    /**
+     * This may take a LONG time.
+     *
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
     protected I2PSocketManager buildSocketManager() {
-        return buildSocketManager(getTunnel());
+        return buildSocketManager(getTunnel(), this.privKeyFile, this.l);
     }
+    /**
+     * This may take a LONG time.
+     *
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
     protected static I2PSocketManager buildSocketManager(I2PTunnel tunnel) {
+        return buildSocketManager(tunnel, null);
+    }
+
+    private static final int RETRY_DELAY = 20*1000;
+    private static final int MAX_RETRIES = 4;
+
+    /**
+     * This may take a LONG time.
+     *
+     * @param pkf absolute path or null
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
+    protected static I2PSocketManager buildSocketManager(I2PTunnel tunnel, String pkf) {
+        return buildSocketManager(tunnel, pkf, null);
+    }
+
+    /**
+     * This may take a LONG time.
+     *
+     * @param pkf absolute path or null
+     * @return non-null
+     * @throws IllegalArgumentException if the I2CP configuration is b0rked so
+     *                                  badly that we cant create a socketManager
+     */
+    protected static I2PSocketManager buildSocketManager(I2PTunnel tunnel, String pkf, Logging log) {
+        // shadows instance _log
+        Log _log = tunnel.getContext().logManager().getLog(I2PTunnelClientBase.class);
         Properties props = new Properties();
         props.putAll(tunnel.getClientOptions());
         int portNum = 7654;
@@ -229,15 +395,51 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
         }
         
         I2PSocketManager sockManager = null;
+        // FIXME: Can't stop a tunnel from the UI while it's in this loop (no session yet)
+        int retries = 0;
         while (sockManager == null) {
-            sockManager = I2PSocketManagerFactory.createManager(tunnel.host, portNum, props);
+            if (pkf != null) {
+                // Persistent client dest
+                FileInputStream fis = null;
+                try {
+                    fis = new FileInputStream(pkf);
+                    sockManager = I2PSocketManagerFactory.createManager(fis, tunnel.host, portNum, props);
+                } catch (IOException ioe) {
+                    if (log != null)
+                        log.log("Error opening key file " + ioe);
+                    _log.error("Error opening key file", ioe);
+                    throw new IllegalArgumentException("Error opening key file " + ioe);
+                } finally {
+                    if (fis != null)
+                        try { fis.close(); } catch (IOException ioe) {}
+                }
+            } else {
+                sockManager = I2PSocketManagerFactory.createManager(tunnel.host, portNum, props);
+            }
             
             if (sockManager == null) {
-                _log.log(Log.CRIT, "Unable to create socket manager");
-                try { Thread.sleep(10*1000); } catch (InterruptedException ie) {}
+                // try to make this error sensible as it will happen... sadly we can't get to the listenPort, only the listenHost
+                String msg = "Unable to connect to the router at " + tunnel.host + ':' + portNum +
+                             " and build tunnels for the client";
+                if (++retries < MAX_RETRIES) {
+                    if (log != null)
+                        log.log(msg + ", retrying in " + (RETRY_DELAY / 1000) + " seconds");
+                    _log.error(msg + ", retrying in " + (RETRY_DELAY / 1000) + " seconds");
+                } else {
+                    if (log != null)
+                        log.log(msg + ", giving up");
+                    _log.log(Log.CRIT, msg + ", giving up");
+                    // not clear if callers can handle null
+                    //return null;
+                    throw new IllegalArgumentException(msg);
+                }
+                try { Thread.sleep(RETRY_DELAY); } catch (InterruptedException ie) {}
             }
         }
         sockManager.setName("Client");
+        if (_log.shouldLog(Log.INFO))
+            _log.info(tunnel.getClientOptions().getProperty("inbound.nickname") + ": Built a new socket manager [s=" + sockManager.getSession() + "]");
+        tunnel.addSession(sockManager.getSession());
         return sockManager;
     }
 
@@ -261,7 +463,7 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
      * called by derived classes after initialization.
      *
      */
-    public final void startRunning() {
+    public void startRunning() {
         synchronized (startLock) {
             startRunning = true;
             startLock.notify();
@@ -269,8 +471,9 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
     }
 
     /** 
-     * create the default options (using the default timeout, etc)
-     *
+     * Create the default options (using the default timeout, etc).
+     * Warning, this does not make a copy of I2PTunnel's client options,
+     * it modifies them directly.
      */
     protected I2PSocketOptions getDefaultOptions() {
         Properties defaultOpts = getTunnel().getClientOptions();
@@ -281,8 +484,10 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
     }
     
     /** 
-     * create the default options (using the default timeout, etc)
-     *
+     * Create the default options (using the default timeout, etc).
+     * Warning, this does not make a copy of I2PTunnel's client options,
+     * it modifies them directly.
+     * Do not use overrides for per-socket options.
      */
     protected I2PSocketOptions getDefaultOptions(Properties overrides) {
         Properties defaultOpts = getTunnel().getClientOptions();
@@ -294,6 +499,22 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
     }
 
     /**
+     *  Update the I2PSocketManager.
+     *
+     *  @since 0.9.1
+     */
+    @Override
+    public void optionsUpdated(I2PTunnel tunnel) {
+        if (getTunnel() != tunnel)
+            return;
+        I2PSocketManager sm = _ownDest ? sockMgr : socketManager;
+        if (sm == null)
+            return;
+        Properties props = tunnel.getClientOptions();
+        sm.setDefaultOptions(sm.buildOptions(props));
+    }
+
+    /**
      * Create a new I2PSocket towards to the specified destination,
      * adding it to the list of connections actually managed by this
      * tunnel.
@@ -302,6 +523,7 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
      * @return a new I2PSocket
      */
     public I2PSocket createI2PSocket(Destination dest) throws I2PException, ConnectException, NoRouteToHostException, InterruptedIOException {
+        verifySocketManager();
         return createI2PSocket(dest, getDefaultOptions());
     }
 
@@ -322,6 +544,7 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
     public I2PSocket createI2PSocket(Destination dest, I2PSocketOptions opt) throws I2PException, ConnectException, NoRouteToHostException, InterruptedIOException {
         I2PSocket i2ps;
 
+        verifySocketManager();
         i2ps = sockMgr.connect(dest, opt);
         synchronized (sockLock) {
             mySockets.add(i2ps);
@@ -338,7 +561,6 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
                 synchronized (this) {
                     notifyAll();
                 }
-                synchronized (_waitingSockets) { _waitingSockets.notifyAll(); }
                 return;
             }
             ss = new ServerSocket(localPort, 0, addr);
@@ -347,8 +569,9 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
             if (localPort == 0) {
                 localPort = ss.getLocalPort();
             }
-            notifyEvent("clientLocalPort", new Integer(ss.getLocalPort()));
-            l.log("Listening for clients on port " + localPort + " of " + getTunnel().listenHost);
+            notifyEvent("clientLocalPort", Integer.valueOf(ss.getLocalPort()));
+            // duplicates message in constructor
+            //l.log("Listening for clients on port " + localPort + " of " + getTunnel().listenHost);
 
             // Notify constructor that port is ready
             synchronized (this) {
@@ -366,16 +589,15 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
                 }
             }
 
-            while (true) {
+            while (open) {
                 Socket s = ss.accept();
-                long before = System.currentTimeMillis();
                 manageConnection(s);
-                long total = System.currentTimeMillis() - before;
-                _context.statManager().addRateData("i2ptunnel.client.manageTime", total, total);
             }
         } catch (IOException ex) {
-            _log.error("Error listening for connections on " + localPort, ex);
-            notifyEvent("openBaseClientResult", "error");
+            if (open) {
+                _log.error("Error listening for connections on " + localPort, ex);
+                notifyEvent("openBaseClientResult", "error");
+            }
             synchronized (sockLock) {
                 mySockets.clear();
             }
@@ -384,8 +606,29 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
                 notifyAll();
             }
         }
-        synchronized (_waitingSockets) {
-            _waitingSockets.notifyAll();
+    }
+
+    /**
+     *  @return may be null if no class has been instantiated
+     *  @since 0.8.8
+     */
+    static ThreadPoolExecutor getClientExecutor() {
+        return _executor;
+    }
+
+    /**
+     *  @since 0.8.8
+     */
+    static void killClientExecutor() {
+        synchronized (_executorLock) {
+            if (_executor != null) {
+                _executor.setRejectedExecutionHandler(new ThreadPoolExecutor.DiscardPolicy());
+                _executor.shutdownNow();
+                _executor = null;
+            }
+            // kill the shared client, so that on restart in android
+            // we won't latch onto the old one
+            socketManager = null;
         }
     }
 
@@ -396,24 +639,46 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
      */
     protected void manageConnection(Socket s) {
         if (s == null) return;
-        if (_numConnectionBuilders <= 0) {
-            new I2PThread(new BlockingRunner(s), "Clinet run").start();
+        ThreadPoolExecutor tpe = _executor;
+        if (tpe == null) {
+            _log.error("No executor for socket!");
+             try {
+                 s.close();
+             } catch (IOException ioe) {}
             return;
         }
-        
-        if (_maxWaitTime > 0)
-            SimpleScheduler.getInstance().addEvent(new CloseEvent(s), _maxWaitTime);
+        try {
+            tpe.execute(new BlockingRunner(s));
+        } catch (RejectedExecutionException ree) {
+             // should never happen, we have an unbounded pool and never stop the executor
+             try {
+                 s.close();
+             } catch (IOException ioe) {}
+        }
+    }
 
-        synchronized (_waitingSockets) {
-            _waitingSockets.add(s);
-            _waitingSockets.notifyAll();
+    /**
+     * Not really needed for now but in case we want to add some hooks like afterExecute().
+     */
+    private static class CustomThreadPoolExecutor extends ThreadPoolExecutor {
+        public CustomThreadPoolExecutor() {
+             super(0, Integer.MAX_VALUE, HANDLER_KEEPALIVE_MS, TimeUnit.MILLISECONDS,
+                   new SynchronousQueue(), new CustomThreadFactory());
+        }
+    }
+
+    /** just to set the name and set Daemon */
+    private static class CustomThreadFactory implements ThreadFactory {
+        public Thread newThread(Runnable r) {
+            Thread rv = Executors.defaultThreadFactory().newThread(r);
+            rv.setName("I2PTunnel Client Runner " + (++_executorThreadCount));
+            rv.setDaemon(true);
+            return rv;
         }
     }
 
     /** 
-     * Blocking runner, used during the connection establishment whenever we
-     * are not using the queued builders.
-     *
+     * Blocking runner, used during the connection establishment
      */
     private class BlockingRunner implements Runnable {
         private Socket _s;
@@ -423,64 +688,43 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
         }
     }
     
-    /**
-     * Remove and close the socket from the waiting list, if it is still there.
-     *
-     */
-    private class CloseEvent implements SimpleTimer.TimedEvent {
-        private Socket _s;
-        public CloseEvent(Socket s) { _s = s; }
-        public void timeReached() {
-            int remaining = 0;
-            boolean stillWaiting = false;
-            synchronized (_waitingSockets) {
-                stillWaiting = _waitingSockets.remove(_s);
-                remaining = _waitingSockets.size();
-            }
-            if (stillWaiting) {
-                try { _s.close(); } catch (IOException ioe) {}
-                if (_log.shouldLog(Log.INFO)) {
-                    _context.statManager().addRateData("i2ptunnel.client.closeBacklog", remaining, 0);
-                    _log.info("Closed a waiting socket because of backlog");
-                }
-            } else {
-                _context.statManager().addRateData("i2ptunnel.client.closeNoBacklog", remaining, 0);
-            }
-        }
-    }
-
     public boolean close(boolean forced) {
+        if (_log.shouldLog(Log.INFO))
+            _log.info("close() called: forced = " + forced + " open = " + open + " sockMgr = " + sockMgr);
         if (!open) return true;
         // FIXME: here we might have to wait quite a long time if
         // there is a connection attempt atm. But without waiting we
         // might risk to create an orphan socket. Would be better
         // to return with an error in that situation quickly.
         synchronized (sockLock) {
-            mySockets.retainAll(sockMgr.listSockets());
-            if (!forced && mySockets.size() != 0) {
-                l.log("There are still active connections!");
-                _log.debug("can't close: there are still active connections!");
-                for (Iterator it = mySockets.iterator(); it.hasNext();) {
-                    l.log("->" + it.next());
+            if (sockMgr != null) {
+                mySockets.retainAll(sockMgr.listSockets());
+                if ((!forced) && (!mySockets.isEmpty())) {
+                    l.log("Not closing, there are still active connections!");
+                    _log.debug("can't close: there are still active connections!");
+                    for (I2PSocket s : mySockets) {
+                        l.log("  -> " + s.toString());
+                    }
+                    return false;
                 }
-                return false;
+                if (!chained) {
+                    I2PSession session = sockMgr.getSession();
+                    if (session != null) {
+                        getTunnel().removeSession(session);
+                    }
+                } // else the app chaining to this one closes it!
             }
-            I2PSession session = sockMgr.getSession();
-            if (session != null) {
-                getTunnel().removeSession(session);
-            }
-            l.log("Closing client " + toString());
+            l.log("Stopping client " + toString());
+            open = false;
             try {
                 if (ss != null) ss.close();
             } catch (IOException ex) {
-                ex.printStackTrace();
+                if (_log.shouldLog(Log.WARN))
+                    _log.warn("error closing", ex);
                 return false;
             }
-            l.log("Client closed.");
-            open = false;
+            //l.log("Client closed.");
         }
-        
-        synchronized (_waitingSockets) { _waitingSockets.notifyAll(); }
         return true;
     }
 
@@ -488,40 +732,10 @@ public abstract class I2PTunnelClientBase extends I2PTunnelTask implements Runna
         try {
             s.close();
         } catch (IOException ex) {
-            _log.error("Could not close socket", ex);
+            //_log.error("Could not close socket", ex);
         }
     }
     
-    /**
-     * Pool runner pulling sockets off the waiting list and pushing them
-     * through clientConnectionRun.  This dies when the I2PTunnel instance
-     * is closed.
-     *
-     */
-    private class TunnelConnectionBuilder implements Runnable {
-        public void run() { 
-            Socket s = null;
-            while (open) {
-                try {
-                    synchronized (_waitingSockets) {
-                        if (_waitingSockets.size() <= 0)
-                            _waitingSockets.wait();
-                        else
-                            s = (Socket)_waitingSockets.remove(0);
-                    }
-                } catch (InterruptedException ie) {}
-                
-                if (s != null) {
-                    long before = System.currentTimeMillis();
-                    clientConnectionRun(s);
-                    long total = System.currentTimeMillis() - before;
-                    _context.statManager().addRateData("i2ptunnel.client.buildRunTime", total, 0);
-                }
-                s = null;
-            }
-        }
-    }
-
     /**
      * Manage a connection in a separate thread. This only works if
      * you do not override manageConnection()
