@@ -4,7 +4,8 @@ import java.util.Map;
 
 import net.i2p.data.Hash;
 import net.i2p.router.RouterContext;
-import net.i2p.util.DecayingBloomFilter;
+import net.i2p.router.util.DecayingBloomFilter;
+import net.i2p.router.util.DecayingHashSet;
 import net.i2p.util.Log;
 
 /**
@@ -16,16 +17,16 @@ import net.i2p.util.Log;
  * basic line of defense here).
  *
  */
-public class InboundMessageFragments /*implements UDPTransport.PartialACKSource */{
-    private RouterContext _context;
-    private Log _log;
+class InboundMessageFragments /*implements UDPTransport.PartialACKSource */{
+    private final RouterContext _context;
+    private final Log _log;
     /** list of message IDs recently received, so we can ignore in flight dups */
     private DecayingBloomFilter _recentlyCompletedMessages;
-    private OutboundMessageFragments _outbound;
-    private UDPTransport _transport;
-    private ACKSender _ackSender;
-    private MessageReceiver _messageReceiver;
-    private boolean _alive;
+    private final OutboundMessageFragments _outbound;
+    private final UDPTransport _transport;
+    private final ACKSender _ackSender;
+    private final MessageReceiver _messageReceiver;
+    private volatile boolean _alive;
     
     /** decay the recently completed every 20 seconds */
     private static final int DECAY_PERIOD = 10*1000;
@@ -38,13 +39,13 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
         _transport = transport;
         _ackSender = new ACKSender(_context, _transport);
         _messageReceiver = new MessageReceiver(_context, _transport);
-        _context.statManager().createRateStat("udp.receivedCompleteTime", "How long it takes to receive a full message", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
-        _context.statManager().createRateStat("udp.receivedCompleteFragments", "How many fragments go in a fully received message", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
-        _context.statManager().createRateStat("udp.receivedACKs", "How many messages were ACKed at a time", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
-        _context.statManager().createRateStat("udp.ignoreRecentDuplicate", "Take note that we received a packet for a recently completed message", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
-        _context.statManager().createRateStat("udp.receiveMessagePeriod", "How long it takes to pull the message fragments out of a packet", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
-        _context.statManager().createRateStat("udp.receiveACKPeriod", "How long it takes to pull the ACKs out of a packet", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
-        _context.statManager().createRateStat("udp.receivePiggyback", "How many acks were included in a packet with data fragments (time == # data fragments)", "udp", new long[] { 60*1000, 10*60*1000, 60*60*1000, 24*60*60*1000 });
+        _context.statManager().createRateStat("udp.receivedCompleteTime", "How long it takes to receive a full message", "udp", UDPTransport.RATES);
+        _context.statManager().createRateStat("udp.receivedCompleteFragments", "How many fragments go in a fully received message", "udp", UDPTransport.RATES);
+        _context.statManager().createRateStat("udp.receivedACKs", "How many messages were ACKed at a time", "udp", UDPTransport.RATES);
+        _context.statManager().createRateStat("udp.ignoreRecentDuplicate", "Take note that we received a packet for a recently completed message", "udp", UDPTransport.RATES);
+        //_context.statManager().createRateStat("udp.receiveMessagePeriod", "How long it takes to pull the message fragments out of a packet", "udp", UDPTransport.RATES);
+        //_context.statManager().createRateStat("udp.receiveACKPeriod", "How long it takes to pull the ACKs out of a packet", "udp", UDPTransport.RATES);
+        _context.statManager().createRateStat("udp.receivePiggyback", "How many acks were included in a packet with data fragments (time == # data fragments)", "udp", UDPTransport.RATES);
     }
     
     public void startup() { 
@@ -52,7 +53,7 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
         // may want to extend the DecayingBloomFilter so we can use a smaller 
         // array size (currently its tuned for 10 minute rates for the 
         // messageValidator)
-        _recentlyCompletedMessages = new DecayingBloomFilter(_context, DECAY_PERIOD, 4);
+        _recentlyCompletedMessages = new DecayingHashSet(_context, DECAY_PERIOD, 4, "UDPIMF");
         _ackSender.startup();
         _messageReceiver.startup();
     }
@@ -70,15 +71,16 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
      * Pull the fragments and ACKs out of the authenticated data packet
      */
     public void receiveData(PeerState from, UDPPacketReader.DataReader data) {
-        long beforeMsgs = _context.clock().now();
+        //long beforeMsgs = _context.clock().now();
         int fragmentsIncluded = receiveMessages(from, data);
-        long afterMsgs = _context.clock().now();
+        //long afterMsgs = _context.clock().now();
         int acksIncluded = receiveACKs(from, data);
-        long afterACKs = _context.clock().now();
+        //long afterACKs = _context.clock().now();
         
         from.packetReceived(data.getPacketSize());
-        _context.statManager().addRateData("udp.receiveMessagePeriod", afterMsgs-beforeMsgs, afterACKs-beforeMsgs);
-        _context.statManager().addRateData("udp.receiveACKPeriod", afterACKs-afterMsgs, afterACKs-beforeMsgs);
+        // each of these was less than 0.1 ms
+        //_context.statManager().addRateData("udp.receiveMessagePeriod", afterMsgs-beforeMsgs, afterACKs-beforeMsgs);
+        //_context.statManager().addRateData("udp.receiveACKPeriod", afterACKs-afterMsgs, afterACKs-beforeMsgs);
         if ( (fragmentsIncluded > 0) && (acksIncluded > 0) )
             _context.statManager().addRateData("udp.receivePiggyback", acksIncluded, fragmentsIncluded);
     }
@@ -95,25 +97,28 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
         if (fragments <= 0) return fragments;
         Hash fromPeer = from.getRemotePeer();
             
-        Map messages = from.getInboundMessages();
-            
+        Map<Long, InboundMessageState> messages = from.getInboundMessages();
+
         for (int i = 0; i < fragments; i++) {
             long mid = data.readMessageId(i);
-            Long messageId = new Long(mid);
+            Long messageId = Long.valueOf(mid);
 
             if (_recentlyCompletedMessages.isKnown(mid)) {
-                _context.statManager().addRateData("udp.ignoreRecentDuplicate", 1, 0);
-                from.messageFullyReceived(messageId, -1);
-                _ackSender.ackPeer(from);
-                if (_log.shouldLog(Log.INFO))
-                    _log.info("Message received is a dup: " + mid + " dups: " 
-                              + _recentlyCompletedMessages.getCurrentDuplicateCount() + " out of " 
-                              + _recentlyCompletedMessages.getInsertedCount());
-                _context.messageHistory().droppedInboundMessage(mid, from.getRemotePeer(), "dup");
+                // Only update stats for the first fragment,
+                // otherwise it wildly overstates things
+                if (data.readMessageFragmentNum(i) == 0) {
+                    _context.statManager().addRateData("udp.ignoreRecentDuplicate", 1);
+                    from.messageFullyReceived(messageId, -1);
+                    _ackSender.ackPeer(from);
+                    if (_log.shouldLog(Log.INFO))
+                        _log.info("Message received is a dup: " + mid + " dups: " 
+                                  + _recentlyCompletedMessages.getCurrentDuplicateCount() + " out of " 
+                                  + _recentlyCompletedMessages.getInsertedCount());
+                    _context.messageHistory().droppedInboundMessage(mid, from.getRemotePeer(), "dup");
+                }
                 continue;
             }
             
-            int size = data.readMessageFragmentSize(i);
             InboundMessageState state = null;
             boolean messageComplete = false;
             boolean messageExpired = false;
@@ -121,43 +126,51 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
             boolean partialACK = false;
          
             synchronized (messages) {
-                state = (InboundMessageState)messages.get(messageId);
+                boolean isNew = false;
+                state = messages.get(messageId);
                 if (state == null) {
                     state = new InboundMessageState(_context, mid, fromPeer);
-                    messages.put(messageId, state);
+                    isNew = true;
+                    // we will add to messages shortly if it isn't complete
                 }
                 
                 fragmentOK = state.receiveFragment(data, i);
              
                 if (state.isComplete()) {
                     messageComplete = true;
-                    messages.remove(messageId);
+                    if (!isNew)
+                        messages.remove(messageId);
                 } else if (state.isExpired()) {
                     messageExpired = true;
-                    messages.remove(messageId);
+                    if (!isNew)
+                        messages.remove(messageId);
                 } else {
                     partialACK = true;
+                    if (isNew)
+                        messages.put(messageId, state);
                 }
             }
 
             if (messageComplete) {
                 _recentlyCompletedMessages.add(mid);
-                _messageReceiver.receiveMessage(state);
-
                 from.messageFullyReceived(messageId, state.getCompleteSize());
                 _ackSender.ackPeer(from);
 
-                if (_log.shouldLog(Log.INFO))
-                    _log.info("Message received completely!  " + state);
+                if (_log.shouldLog(Log.DEBUG))
+                    _log.debug("Message received completely!  " + state);
 
                 _context.statManager().addRateData("udp.receivedCompleteTime", state.getLifetime(), state.getLifetime());
                 if (state.getFragmentCount() > 0)
                     _context.statManager().addRateData("udp.receivedCompleteFragments", state.getFragmentCount(), state.getLifetime());
+
+                // this calls state.releaseResources(), all state access must be before this
+                _messageReceiver.receiveMessage(state);
             } else if (messageExpired) {
-                state.releaseResources();
                 if (_log.shouldLog(Log.WARN))
                     _log.warn("Message expired while only being partially read: " + state);
-                _context.messageHistory().droppedInboundMessage(state.getMessageId(), state.getFrom(), "expired hile partially read: " + state.toString());
+                _context.messageHistory().droppedInboundMessage(state.getMessageId(), state.getFrom(), "expired while partially read: " + state.toString());
+                // all state access must be before this
+                state.releaseResources();
             } else if (partialACK) {
                 // not expired but not yet complete... lets queue up a partial ACK
                 if (_log.shouldLog(Log.DEBUG))
@@ -166,6 +179,7 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
                 _ackSender.ackPeer(from);
             }
 
+            // TODO: Why give up on other fragments if one is bad?
             if (!fragmentOK)
                 break;
         }
@@ -173,10 +187,13 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
         return fragments;
     }
     
+    /**
+     *  @return the number of bitfields in the ack? why?
+     */
     private int receiveACKs(PeerState from, UDPPacketReader.DataReader data) {
         int rv = 0;
+        boolean newAck = false;
         if (data.readACKsIncluded()) {
-            int fragments = 0;
             int ackCount = data.readACKCount();
             if (ackCount > 0) {
                 rv += ackCount;
@@ -185,9 +202,13 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
 
                 for (int i = 0; i < ackCount; i++) {
                     long id = data.readACK(i);
-                    if (_log.shouldLog(Log.INFO))
-                        _log.info("Full ACK of message " + id + " received!");
-                    fragments += _outbound.acked(id, from.getRemotePeer());
+                    if (from.acked(id)) {
+                        if (_log.shouldLog(Log.DEBUG))
+                            _log.debug("First full ACK of message " + id + " received from " + from.getRemotePeer());
+                        newAck = true;
+                    //} else if (_log.shouldLog(Log.DEBUG)) {
+                    //    _log.debug("Dup full ACK of message " + id + " received from " + from.getRemotePeer());
+                    }
                 }
             } else {
                 _log.error("Received ACKs with no acks?! " + data);
@@ -200,9 +221,13 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
                 //_context.statManager().getStatLog().addData(from.getRemoteHostId().toString(), "udp.peer.receivePartialACKCount", bitfields.length, 0);
 
                 for (int i = 0; i < bitfields.length; i++) {
-                    if (_log.shouldLog(Log.INFO))
-                        _log.info("Partial ACK received: " + bitfields[i]);
-                    _outbound.acked(bitfields[i], from.getRemotePeer());
+                    if (from.acked(bitfields[i])) {
+                        if (_log.shouldLog(Log.DEBUG))
+                            _log.debug("Final partial ACK received: " + bitfields[i] + " from " + from.getRemotePeer());
+                        newAck = true;
+                    } else if (_log.shouldLog(Log.DEBUG)) {
+                        _log.debug("Partial ACK received: " + bitfields[i] + " from " + from.getRemotePeer());
+                    }
                 }
             }
         }
@@ -210,6 +235,13 @@ public class InboundMessageFragments /*implements UDPTransport.PartialACKSource 
             from.ECNReceived();
         else
             from.dataReceived();
+
+        // Wake up the packet pusher if it is sleeping.
+        // By calling add(), this also is a failsafe against possible
+        // races in OutboundMessageFragments.
+        if (newAck && from.getOutboundMessageCount() > 0)
+            _outbound.add(from);
+
         return rv;
     }
 }
